Filled in more content

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
         <div class="about">
             <!---add in introduction to what the website is about... my projects and stuff-->
             <div class="maincaption">
-                <h2>My Project Home Page!</h2>
+                <h2>My Personal Home Page!</h2>
                 <p>
                     This website contains examples of any projects I've done that I've managed to document in some way.
+                    Plus, some of my favorite things!
                     Enjoy!
                 </p>
                 <button>
@@ -40,8 +41,24 @@
             </p>
         </div>
         <div class="project">
-            <img src="" alt="project2">
-            <p>description of project2</p>
+            <img src="images/autodetailing.jpg" alt="Paint correction of acid rain etching">
+            <p>
+                This part of the website is all about automotive detailing! I have some helpful links 
+                here for you to peruse, as well as what I've done with the knowledge I've 
+                gained from these resources!
+            </p>
+        </div>
+        <div class="project">
+            <img src="images/fudgestripes.jpg" alt="A fresh fudge stripe cookie hovering over milk">
+            <p>
+                I <em>really</em> love food... And fudge stripe cookies are awesome
+            </p>
+        </div>
+        <div class="project">
+            <img src="images/dogtax.jpg" alt="A beautiful black and white dog">
+            <p>
+                Here's my dog tax.
+            </p>
         </div>
     </div>
     <div class="quote">
@@ -55,7 +72,7 @@
     <div class="call-to-action">
         <!---Sign up for... something? by clicking on this link here!-->
         <div class="actiontext">
-            <h3>Call to action! It's time!</h3>
+            <h2>Call to action! It's time!</h2>
             <p>Sign up to receive updates on any projects I do!</p>
         </div>
         <button>
