Added css, tweaked html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seth's Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="introduction">
@@ -12,6 +13,8 @@
             <img src="" alt="Insert my personal logo here">
             <div class="right-links">
                 <!---insert stuff here man-->
+                <a href="https://www.theodinproject.com">The Odin Project</a>
+                <a href="https://github.com">GitHub</a>
             </div>
         </header>
         <div class="about">
@@ -23,7 +26,7 @@
                     Plus, some of my favorite things!
                     Enjoy!
                 </p>
-                <button>
+                <button class="sign-up">
                     <a href="sign-up">Sign up!</a>
                 </button>
             </div>
@@ -32,33 +35,37 @@
     </div>
     <div class="portfolio">
         <!---add in project links, images, subtites here-->
-        <h2>Click on any of the following links to learn more!</h2>
-        <div class="project">
-            <img src="images/truckdash.jpg" alt="A typical chevrolet gauge cluster" class="300pximg">
-            <p>
-                This is a long-term project where I've been chasing electrical gremlins in a 1995 Chevrolet Truck.
-                Future plans include replacing the entire cluster with a digital display running on a Raspberry Pi
-            </p>
+        <div class="learnmore">
+            <h2>Click on any of the following links to learn more!</h2>
         </div>
-        <div class="project">
-            <img src="images/autodetailing.jpg" alt="Paint correction of acid rain etching">
-            <p>
-                This part of the website is all about automotive detailing! I have some helpful links 
-                here for you to peruse, as well as what I've done with the knowledge I've 
-                gained from these resources!
-            </p>
-        </div>
-        <div class="project">
-            <img src="images/fudgestripes.jpg" alt="A fresh fudge stripe cookie hovering over milk">
-            <p>
-                I <em>really</em> love food... And fudge stripe cookies are awesome
-            </p>
-        </div>
-        <div class="project">
-            <img src="images/dogtax.jpg" alt="A beautiful black and white dog">
-            <p>
-                Here's my dog tax.
-            </p>
+        <div class="cards">
+            <div class="project">
+                <img src="images/truckdash.jpg" alt="A typical chevrolet gauge cluster" class="300pximg">
+                <p>
+                    This is a long-term project where I've been chasing electrical gremlins in a 1995 Chevrolet Truck.
+                    Future plans include replacing the entire cluster with a digital display running on a Raspberry Pi
+                </p>
+            </div>
+            <div class="project">
+                <img src="images/autodetailing.jpg" alt="Paint correction of acid rain etching">
+                <p>
+                    This part of the website is all about automotive detailing! I have some helpful links 
+                    here for you to peruse, as well as what I've done with the knowledge I've 
+                    gained from these resources!
+                </p>
+            </div>
+            <div class="project">
+                <img src="images/fudgestripes.jpg" alt="A fresh fudge stripe cookie hovering over milk">
+                <p>
+                    I <em>really</em> love food... And fudge stripe cookies are awesome
+                </p>
+            </div>
+            <div class="project">
+                <img src="images/dogtax.jpg" alt="A beautiful black and white dog">
+                <p>
+                    Here's my dog tax.
+                </p>
+            </div>
         </div>
     </div>
     <div class="quote">
@@ -75,8 +82,8 @@
             <h2>Call to action! It's time!</h2>
             <p>Sign up to receive updates on any projects I do!</p>
         </div>
-        <button>
-            <a href="sign-up">Sign up!</a>
+        <button class="sign-up">
+            <a href="sign-up" >Sign up!</a>
         </button>
         
     </div>
