Tweaked image, html, and css

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
         </div>
         <div class="cards">
             <div class="project">
-                <img src="images/truckdash.jpg" alt="A typical chevrolet gauge cluster" class="300pximg">
+                <img class="boxed" src="images/truckdash.jpg" alt="A typical chevrolet gauge cluster" class="300pximg">
                 <p>
                     This is a long-term project where I've been chasing electrical gremlins in a 1995 Chevrolet Truck.
                     Future plans include replacing the entire cluster with a digital display running on a Raspberry Pi
                 </p>
             </div>
             <div class="project">
-                <img src="images/autodetailing.jpg" alt="Paint correction of acid rain etching">
+                <img class="boxed" src="images/autodetailing.jpg" alt="Paint correction of acid rain etching">
                 <p>
                     This part of the website is all about automotive detailing! I have some helpful links 
                     here for you to peruse, as well as what I've done with the knowledge I've 
@@ -55,13 +55,13 @@
                 </p>
             </div>
             <div class="project">
-                <img src="images/fudgestripes.jpg" alt="A fresh fudge stripe cookie hovering over milk">
+                <img class="boxed" src="images/fudgestripescrop.jpg" alt="A fresh fudge stripe cookie hovering over milk">
                 <p>
                     I <em>really</em> love food... And fudge stripe cookies are awesome
                 </p>
             </div>
             <div class="project">
-                <img src="images/dogtax.jpg" alt="A beautiful black and white dog">
+                <img class="boxed" src="images/dogtax.jpg" alt="A beautiful black and white dog">
                 <p>
                     Here's my dog tax.
                 </p>
