--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
                 <p>
                     Here's my dog tax.
                 </p>
+            <div class="project">
+                <img class="boxed" src="images/kitty.jpeg" alt="And a gorgeous kitty!">
+                <p>
+                    Here's a kitty we rescued over a decade ago!
+                </p>
+            </div>
             </div>
         </div>
     </div>
