Added RPS project to landing-page

--- a/index.html
+++ b/index.html
@@ -71,7 +71,14 @@
                 <p>
                     Here's a kitty we rescued over a decade ago!
                 </p>
-            
+            </div>
+            <div class="project">
+                <a href="rps/rps.html">
+                    <img class="boxed" src="images/code.png" alt="An image of JS code">
+                </a>
+                <p>
+                    A page containing all of my own little programming projects
+                </p>
             </div>
         </div>
     </div>
