Modified file names, fixed links, added RockPaperScissors and Programming pages

--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
                 </p>
             </div>
             <div class="project">
+                <a href="programmingpages/progprojects.html">
+                    <img class="boxed" src="images/code.png" alt="An image of JS code">
+                </a>
+                <p>
+                    A page containing all of my own little programming projects
+                </p>
+            </div>
+            <div class="project">
                 <img class="boxed" src="images/fudgestripescrop.jpg" alt="A fresh fudge stripe cookie hovering over milk">
                 <p>
                     I <em>really</em> love food... And fudge stripe cookies are awesome
@@ -70,14 +78,6 @@
                 <img class="boxed" src="images/kitty.jpeg" alt="And a gorgeous kitty!">
                 <p>
                     Here's a kitty we rescued over a decade ago!
-                </p>
-            </div>
-            <div class="project">
-                <a href="rps/rps.html">
-                    <img class="boxed" src="images/code.png" alt="An image of JS code">
-                </a>
-                <p>
-                    A page containing all of my own little programming projects
                 </p>
             </div>
         </div>
