--- a/programmingpages/rps/rps.html
+++ b/programmingpages/rps/rps.html
@@ -15,7 +15,8 @@
             <img src="" alt="Insert my personal logo here">
             <div class="right-links">
                 <!---insert stuff here man-->
-                <a href="../index.html">Home</a>
+                <a href="../../index.html">Home</a>
+                <a href="../progprojects.html">Programming Projects</a>
                 <a href="https://www.theodinproject.com">The Odin Project</a>
                 <a href="https://github.com">GitHub</a>
             
