--- a/programmingpages/etchasketch/etchasketch.html
+++ b/programmingpages/etchasketch/etchasketch.html
@@ -10,9 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <div id="game">
-
+    <div class="game">
     </div>
 </body>
 </html>
