Worked out operations, numbers, keeping results

--- a/programmingpages/calculator/calc.html
+++ b/programmingpages/calculator/calc.html
@@ -29,6 +29,8 @@
         <button id="subtractButton" class="operate">-</button>
         <button id="multiplyButton" class="operate">*</button>
         <button id="divideButton" class="operate">/</button>
+    </div>
+    <div class="finishers">
         <button id="equalsButton" class="operate">=</button>
         <button id="clearButton" class="operate">Clear</button>
     </div>
