Added decimal, changed layout, attempted positive/negative conversion

--- a/programmingpages/calculator/calc.html
+++ b/programmingpages/calculator/calc.html
@@ -12,7 +12,7 @@
     <div id="calculator">
         <div class="display">
             <p class="previousWork"></p>
-            <p class="result">Result goes here</p>
+            <p class="result">0</p>
         </div>
         <div class="workingSection">
             <div class="numberField">
@@ -24,7 +24,7 @@
                 <div class="three">
                     <button id="four" class="numberButton" value=4>4</button>
                     <button id="five" class="numberButton" value=5>5</button>
-                    <button id="six" class="numberButton" value=5>6</button>
+                    <button id="six" class="numberButton" value=6>6</button>
                 </div>
                 <div class="three">
                     <button id="one" class="numberButton" value=1>1</button>
@@ -33,13 +33,15 @@
                 </div>
                 <div class="three">
                     <button id="zero" class="numberButton" value=0>0</button>
+                    <button id="decimal" class="numberButton" value=.>.</button>
                 </div>
             </div>
             <div class="operators">
-                <button id="addButton" class="operate">+</button>
-                <button id="subtractButton" class="operate">-</button>
-                <button id="multiplyButton" class="operate">*</button>
                 <button id="divideButton" class="operate">/</button>
+                <button id="multiplyButton" class="operate">*</button>
+                <button id="subtractButton" class="operate">-</button>
+                <button id="addButton" class="operate">+</button>
+                <button id="posNeg" class="numberButton">+/-</button>
             </div>
         </div>
         <div class="finishers">
