Fleshing out auto project pages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="introduction">
         <header>
-            <img src="" alt="Insert my personal logo here">
+            <img src="images/logo.png" alt="Insert my personal logo here">
             <div class="right-links">
                 <!---insert stuff here man-->
                 <a href="https://www.theodinproject.com">The Odin Project</a>
@@ -39,13 +39,16 @@
             <h2>Click on any of the following links to learn more!</h2>
         </div>
         <div class="cards">
-            <div class="project">
-                <img class="boxed" src="images/truckdash.jpg" alt="A typical chevrolet gauge cluster" class="300pximg">
-                <p>
-                    This is a long-term project where I've been chasing electrical gremlins in a 1995 Chevrolet Truck.
-                    Future plans include replacing the entire cluster with a digital display running on a Raspberry Pi
-                </p>
-            </div>
+                <a class="projectLink" style="display:block" href="autoProjectPages/autoProjects.html">
+                    <div class="project" id="automotiveProjects">
+                        <img class="boxed" src="images/truckdash.jpg" alt="A typical chevrolet gauge cluster" class="300pximg">
+                        <p>
+                            A portfolio of automotive projects, ranging from attempting
+                            to modernize a 1995 Chevrolet truck to swapping an engine
+                            in a 2007-ish Honda Civic
+                        </p>
+                    </div>
+                </a>
             <div class="project">
                 <img class="boxed" src="images/autodetailing.jpg" alt="Paint correction of acid rain etching">
                 <p>
@@ -99,11 +102,10 @@
         <button class="sign-up">
             <a href="sign-up" >Sign up!</a>
         </button>
-        
     </div>
     <footer>
-        <p>Copyright Seth 2021</p>
-        <p>Unless its Copyright The Odin Project 2021</p>
+        <p>Copyright Seth 2021-2022</p>
+        <p>Unless its Copyright The Odin Project 2021-2022</p>
     </footer>
 </body>
 </html>
