Updated programming section, tweaked CSS on automotive section

--- a/autoProjectPages/autoProjects.html
+++ b/autoProjectPages/autoProjects.html
@@ -21,6 +21,7 @@
         </p>
         <a href="01Civic/Civic.html">2007 Honda Civic Engine Swap</a>
         <a href="02ObdReader/ObdReader.html">The OBD Reader Project</a>
+        <a href="03Chevy1995/Chevy1995.html">The 1995 Chevrolet Ongoing Project</a>
     </div>
     <div class="cards">
         <div class="project">
