--- a/programmingpages/progprojects.html
+++ b/programmingpages/progprojects.html
@@ -10,7 +10,7 @@
 <body>
     <div class="introduction">
         <header>
-            <img src="" alt="Insert my personal logo here">
+            <img src="../images/logo.png" alt="Insert my personal logo here">
             <div class="right-links">
                 <!---insert stuff here man-->
                 <a href="../index.html">Home</a>
@@ -47,6 +47,20 @@
                 <p>
                     A javascript-based Rock Paper Scissors game
                 </p>
+            </div>
+            <div class="project">
+                <a href="calculator/calc.html">
+                    <img class="boxed" src="images/calculator.png" alt="A 
+                    Screenshot of my Calculator in Javascript">
+                    <p>A calculator <sup>in progress</sup> in vanilla Javascript</p>
+                </a>
+            </div>
+            <div class="project">
+                <a href="etchasketch/etchasketch.html">
+                    <img class="boxed" src="images/etchAsketch.png" 
+                    alt="A DIY Etch-A-Sketch">
+                    <p>A DIY Etch-A-Sketch <sup>in progress</sup> using Javascript</p>
+                </a>
             </div>
         </div>
     </div>
