--- a/autoProjectPages/autoProjects.html
+++ b/autoProjectPages/autoProjects.html
@@ -11,9 +11,11 @@
     <header>
         <img src="../images/logo.png" alt="Insert my personal logo here">
             <!---insert stuff here man-->
+        <div class="rightLinks">
             <a href="../index.html">Home</a>
             <a href="https://www.theodinproject.com">The Odin Project</a>
             <a href="https://github.com">GitHub</a>
+        </div>
     </header>
     <div class="nav">
         <p>
