Great stopping point for the dashboard layout

--- a/webDevPages/dashboard.html
+++ b/webDevPages/dashboard.html
@@ -25,23 +25,15 @@
         </div>
     </nav>
     <header>
-        <div class="topRow">
-            <input type="text" placeholder="Search...">
-            <p>Bell</p>
-            <p>Avatar</p>
-            <a href="">UserNameHere</a>
-        </div>
-        <div class="bottomRow">
-            <div class="userGreeting">
-                <p>User Image</p>
-                <p>User Greeting, tag</p>
-            </div>
-            <div class="userActionButtons">
-                <button>New</button>
-                <button>Upload</button>
-                <button>Share</button>
-            </div>
-        </div>
+        <input type="text" placeholder="Search...">
+        <p id="bell">Bell</p>
+        <p class="avatar">Avatar</p>
+        <a class="userName" href="">UserNameHere</a>
+        <p class="userImage">User Image</p>
+        <p class="userGreeting">User Greeting, tag</p>
+        <button class="new">New</button>
+        <button class="upload">Upload</button>
+        <button class="share">Share</button>
     </header>
     <div class="content">
         <div class="projects">
@@ -50,8 +42,54 @@
             </div>
             <div class="card">
                 This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
             </div>
             <div class="card">
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+            </div>
+            <div class="card">
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
                 This is a card!
             </div>
             <div class="card">
@@ -59,15 +97,41 @@
             </div>
             <div class="card">
                 This is a card!
-            </div>
-            <div class="card">
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
+                This is a card!
                 This is a card!
             </div>
         </div>
         <div class="announcements">
-            <p>Announcements go here!</p>
-            <p>There's as many as can reasonably fit!</p>
-            <p>They could be of any size!</p>
+            <a href="">Announcements go here!</a>
+            <a href="">There's as many as can reasonably fit!</a>
+            <a href="">They could be of any size!</a>
         </div>
         <div class="trending">
             <a href="">Here's one user that's trending</a>
