Tweaked to look better on mobile

--- a/index.html
+++ b/index.html
@@ -38,17 +38,27 @@
         <div class="learnmore">
             <h2>Click on any of the following links to learn more!</h2>
         </div>
+        <!--
+            <a class="projectLink" style="display:block" href="">
+                <div class="project" id="template">
+                    <img class="boxed" src="link to image" alt="template"="300pximg">
+                    <p>
+                        Template Template Template
+                    </p>
+                </div>
+            </a>
+        -->
         <div class="cards">
-                <a class="projectLink" style="display:block" href="autoProjectPages/autoProjects.html">
-                    <div class="project" id="automotiveProjects">
-                        <img class="boxed" src="images/truckdash.jpg" alt="A typical chevrolet gauge cluster" class="300pximg">
-                        <p>
-                            A portfolio of automotive projects, ranging from attempting
-                            to modernize a 1995 Chevrolet truck to swapping an engine
-                            in a 2007-ish Honda Civic
-                        </p>
-                    </div>
-                </a>
+            <a class="projectLink" style="display:block" href="autoProjectPages/autoProjects.html">
+                <div class="project" id="automotiveProjects">
+                    <img class="boxed" src="images/truckdash.jpg" alt="A typical chevrolet gauge cluster" class="300pximg">
+                    <p>
+                        A portfolio of automotive projects, ranging from attempting
+                        to modernize a 1995 Chevrolet truck to swapping an engine
+                        in a 2007-ish Honda Civic
+                    </p>
+                </div>
+            </a>
             <div class="project">
                 <img class="boxed" src="images/autodetailing.jpg" alt="Paint correction of acid rain etching">
                 <p>
@@ -62,7 +72,8 @@
                     <img class="boxed" src="images/code.png" alt="An image of JS code">
                 </a>
                 <p>
-                    A page containing all of my own little programming projects
+                    A page containing all of my own little programming or 
+                    web dev projects
                 </p>
             </div>
             <div class="project">
