--- a/programmingpages/progprojects.html
+++ b/programmingpages/progprojects.html
@@ -21,7 +21,7 @@
         <div class="about">
             <!---add in introduction to what the website is about... my projects and stuff-->
             <div class="maincaption">
-                <h2>Programming Projects</h2>
+                <h2>Programming/Web Dev Projects</h2>
                 <p>
                     This page contains various projects I've completed, whether through
                     The Odin Project, Automate the Boring Stuff, or any other various
@@ -37,8 +37,17 @@
     <div class="portfolio">
         <!---add in project links, images, subtites here-->
         <div class="learnmore">
-            <h2>Programming Projects</h2>
+            <h2>Projects</h2>
         </div>
+        <!--
+            <div class="project">
+                <a href="">
+                    <img class="boxed" src="" 
+                    alt="Template">
+                    <p>Template Template Template Description<p>
+                </a>
+            </div>
+        -->
         <div class="cards">
             <div class="project">
                 <a href="rps/rps.html">
@@ -60,6 +69,13 @@
                     <img class="boxed" src="images/etchAsketch.png" 
                     alt="A DIY Etch-A-Sketch">
                     <p>A DIY Etch-A-Sketch <sup>in progress</sup> using Javascript</p>
+                </a>
+            </div>
+            <div class="project">
+                <a href="../webDevPages/dashboard.html">
+                    <img class="boxed" src="images/dashboardTemplateImage.png" 
+                    alt="A screenshot of the dashboard template">
+                    <p>A dashboard template page built using Grid and CSS.<p>
                 </a>
             </div>
         </div>
