--- a/webDevPages/dashboard.html
+++ b/webDevPages/dashboard.html
@@ -129,11 +129,13 @@
             </div>
         </div>
         <div class="announcements">
+            <h2>Announcements</h2>
             <a href="">Announcements go here!</a>
             <a href="">There's as many as can reasonably fit!</a>
             <a href="">They could be of any size!</a>
         </div>
         <div class="trending">
+            <h2>Trending</h2>
             <a href="">Here's one user that's trending</a>
             <a href="">Here's another one trending!</a>
             <a href="">I promise, they're trending!</a>
