Fleshed out the dashboard page some more

--- a/autoProjectPages/01civic/civic.html
+++ b/autoProjectPages/01civic/civic.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Engine Swap in a 2007 Civic</title>
 </head>
 <body>
-    
+    <!--add more pictures here-->
+    <!--Tell something of a story?-->
+    <!--talk about difficulties?-->
+    <!--successes?-->
 </body>
 </html>
