--- a/webDevPages/dashboard.html
+++ b/webDevPages/dashboard.html
@@ -10,18 +10,44 @@
 <body>
     <nav>
         <h2>Dashboard</h2>
-        <div class="userLinks">
-            <a href="">Home</a>
-            <a href="">Profile</a>
-            <a href="">Messages</a>
-            <a href="">History</a>
-            <a href="">Tasks</a>
-            <a href="">Communities</a>
+        <!--
+        <div class="iconsUserLinks">
+            <img src="./webDevImages/home-account.svg" alt="home">
+            <img src="./webDevImages/face-woman-profile.svg" alt="profile">
+            <img src="./webDevImages/message-settings.svg" alt="messages">
+            <img src="./webDevImages/history.svg" alt="history">
+            <img src="./webDevImages/file-tree.svg" alt="tasks">
+            <img src="./webDevImages/google-circles-communities.svg" alt="Communities">
         </div>
+    -->
+        <div class="userLinks">
+            <a href=""><img src="webDevImages/home-account.svg" alt="home">Home</a>
+
+            <a href=""><img src="./webDevImages/face-woman-profile.svg" alt="profile">
+                Profile</a>
+            <a href=""><img src="./webDevImages/message-settings.svg" alt="messages">
+                Messages</a>
+            <a href=""><img src="./webDevImages/history.svg" alt="history">
+                History</a>
+            <a href=""><img src="./webDevImages/file-tree.svg" alt="tasks">
+                Tasks</a>
+            <a href=""><img src="./webDevImages/google-circles-communities.svg" alt="Communities">
+                Communities</a>
+        </div>
+        <!--
+        <div class="iconInfoLinks">
+            <img src="./webDevImages/cog-outline.svg" alt="settings">
+            <img src="./webDevImages/message-question.svg" alt="support">
+            <img src="./webDevImages/shield-account.svg" alt="privacy">
+        </div>
+    -->
         <div class="infoLinks">
-            <a href="">Settings</a>
-            <a href="">Support</a>
-            <a href="">Privacy</a>
+            <a href="">            <img src="./webDevImages/cog-outline.svg" alt="settings">
+                Settings</a>
+            <a href="">            <img src="./webDevImages/message-question.svg" alt="support">
+                Support</a>
+            <a href="">            <img src="./webDevImages/shield-account.svg" alt="privacy">
+                Privacy</a>
         </div>
     </nav>
     <header>
