Resizmages, and fleshed out Civic project page

--- a/autoProjectPages/01civic/civic.html
+++ b/autoProjectPages/01civic/civic.html
@@ -4,9 +4,160 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../subPages.css">
     <title>Engine Swap in a 2007 Civic</title>
 </head>
 <body>
+    <header>
+        <img src="../../images/logo.png" alt="My personal logo here">
+            <!---insert stuff here man-->
+        <div class="rightLinks">
+            <a href="../../index.html">Home</a>
+            <a href="https://www.theodinproject.com">The Odin Project</a>
+            <a href="https://github.com">GitHub</a>
+        </div>
+    </header>
+    <div class="nav">
+        <p>
+            Quick Navigation
+        </p>
+        <a href="../autoProjects.html">Auto Projects</a>
+        <a href="./civic.html">2007 Honda Civic Engine Swap</a>
+        <a href="02ObdReader/ObdReader.html">The OBD Reader Project</a>
+        <a href="03Chevy1995/Chevy1995.html">The 1995 Chevrolet Ongoing Project</a>
+    </div>
+    <div class="content">
+        <h2>Knock knock, who's there</h2>
+        <div id="intro">
+            <h3>Delivery</h3>
+            <p>
+                A few months ago, my friend asked me to get this civic off of his
+                property. He had been driving it some while back when it lost power
+                on the highway, and then shutoff. He said it was low on oil, but
+                otherwise he didn't know what was wrong with it.
+            </p>
+            <img src="../autoProjectImages/civicEngineSwap/01civicDelivery.jpg"
+            alt="Delivery of the Civic">
+            <img src="../autoProjectImages/civicEngineSwap/02civicDelivery.jpg"
+            alt="Civic off the trailer">
+        </div>
+        <div id="runTest">
+            <h3>He said it wouldn't start</h3>
+            <p>
+                So I hooked up 2 truck-sized batteries in parallel with some huge
+                cables... And it started!
+            </p>
+            <img src="../autoProjectImages/civicEngineSwap/03runningTest.jpg"
+            alt="An image of the gauge cluster, running">
+            <p>!!!!!Insert video here!</p>
+            <p>!!!!!Insert video2 here!</p>
+            <p>
+                Yeah, that sound, it ain't good. Knock knock, who's there?
+            </p>
+        </div>
+        <div id="theDonor">
+            <h3>So, off to the pick'n'pull</h3>
+            <p>
+                I kept an eye on the local pick'n'pull's inventory for a Civic to
+                show up with an R18 engine. Finally, one showed up.
+            </p>
+            <img src="../autoProjectImages/civicEngineSwap/07theChoice.jpg"
+            alt="The donor Civic">
+            <p>
+                With my dad's help, we started removing the extra components we
+                didn't need, and disconnecting any electrical connections and hoses
+                that were holding the engine in.
+            </p>
+            <img src="../autoProjectImages/civicEngineSwap/08readyToLift.jpg"
+             alt="Everything disconnected, ready to lift">
+             <p>
+                 Yeah, it was a bit sketchy hanging out underneath the Civic with so
+                 much of it disconnected and ready to pull. But it had to be done.
+                 Then, we lifted.
+             </p>
+             <img src="../autoProjectImages/civicEngineSwap/09onTheWayOut.jpg"
+             alt="Pulling out the engine">
+             <p>
+                 We had some trouble getting the torque converter to stay in the
+                 transmission, but eventually got it separated and the engine out.
+             </p>
+             <img src="../autoProjectImages/civicEngineSwap/10enginePulled.jpg"
+             alt="Engine on the cart">
+             <p>
+                 And checked out of the pick'n'pull! We actually were able to get
+                 from 0 to check-out in 3 hours! I was pretty proud of my Dad and I
+                 to pull that off.
+             </p>
+             <img src="../autoProjectImages/civicEngineSwap/11checkout.jpg"
+             alt="Checking out at the pick'n'pull">
+             <p>
+                 And finally we were on the way home, engine secured in the truck
+                 bed.
+             </p>
+             <img src="../autoProjectImages/civicEngineSwap/12headingHome.jpg"
+              alt="Engine in truck bed">
+        </div>
+        <div id="theVictim">
+            <h3>Pulling the victim's engine</h3>
+            <p>
+                While we were able to pull the engine in the junkyard rather rapidly,
+                I had to ensure that I didn't damage anything pulling the victim's
+                engine. I wanted the install of the replacement engine to go as
+                smoothly as possible.
+            </p>
+            <img src="../autoProjectImages/civicEngineSwap/13restingPlace.jpg"
+            alt="The Civic resting on a pallet infront of the recipient">
+            <p>
+                I knew it would take some time, so I set up a pallet to keep the
+                donor engine high and dry while I was working on preparing the
+                blown engine to be pulled.
+            </p>
+            <img src="../autoProjectImages/civicEngineSwap/14weatherWrap.jpg"
+            alt="Donor engine, wrapped to protect it from the weather">
+            <p>
+                I wrapped up the donor engine with some plastic to protect it from
+                any potential rain. I'm taking my time, and don't want to rush or
+                burn out.
+            </p>
+            <img src="../autoProjectImages/civicEngineSwap/15clearingTheWay.jpg"
+            alt="An in-progress picture of clearing the accessories off the
+            blown engine">
+            <p>
+                I didn't want to have to evacuate or refill the A/C system or power
+                steering <sup>(not pictured)</sup>, so I made sure they were out of
+                the way for pulling the engine.
+            </p>
+            <img src="../autoProjectImages/civicEngineSwap/17engineStand.jpg"
+            alt="Getting the donor engine on an engine stand">
+            <p>
+                Once I was close to being able to pull the blown engine, I set up the
+                donor engine on an engine stand so that I could swap over accessories.
+            </p>
+            <img src="../autoProjectImages/civicEngineSwap/18blownEngineOut.jpg"
+            alt="Blown engine, removed from Civic">
+            <p>
+                Aaaaand it's out! We struggled some, but we were able to pull both
+                the engine and transmission together. This will be useful, as I have
+                to swap over some components since the donor is from an automatic,
+                and the recipient is a manual. Also note the board assisting in holding
+                up the donor engine. I wasn't comfortable with only 4 bolts on one
+                side of the engine, so my Dad fabricated a secondary engine support.
+            </p>
+            <img src="../autoProjectImages/civicEngineSwap/19blownEngineOut.jpg" alt="">
+        </div>
+        <div id="swappingComponents">
+            <h3>Then the swapping begins</h3>
+            <p>
+                I minimized the accessories on the donor engine when we pulled it,
+                and some of the accessories on the recipient are in better condition.
+                So, begins the process of swapping over components.
+            </p>
+            <p>
+                !!!!!Insert video here of knock knock, looking at rod bearing assembly
+            </p>
+        </div>
+        
+    </div>
     <!--add more pictures here-->
     <!--Tell something of a story?-->
     <!--talk about difficulties?-->
