--- a/autoProjectPages/autoProjects.html
+++ b/autoProjectPages/autoProjects.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="../images/logo.png" alt="Insert my personal logo here">
+        <img src="../images/logo.png" alt="My personal logo here">
             <!---insert stuff here man-->
         <div class="rightLinks">
             <a href="../index.html">Home</a>
@@ -27,8 +27,10 @@
     </div>
     <div class="cards">
         <div class="project">
-            <img src="./autoProjectImages/civicEngineSwap/01TheChoice.jpg" 
-            alt="The Donor Civic in the Junkyard">
+            <a href="/autoProjectPages/01civic/civic.html">
+                <img src="./autoProjectImages/civicEngineSwap/02civicDelivery.jpg"
+                alt="The Donor Civic in the Junkyard">
+            </a>
             <p>
                 I happened across a Honda Civic that had been run low on oil - 
                 Till the engine just about seized up. This is the tale of 
